--- a/style.css
+++ b/style.css
@@ -1,4 +1,109 @@
+/* Fontface import */
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap");
+@font-face {
+  font-family: "Cooper Hewitt";
+  font-weight: 300;
+  font-style: normal;
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.eot");
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.eot?#iefix")
+      format("embedded-opentype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.woff2")
+      format("woff2"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.woff")
+      format("woff"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.ttf")
+      format("truetype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.svg#Cooper Hewitt")
+      format("svg");
+}
+
+@font-face {
+  font-family: "Cooper Hewitt";
+  font-weight: 400;
+  font-style: normal;
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.eot");
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.eot?#iefix")
+      format("embedded-opentype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.woff2")
+      format("woff2"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.woff")
+      format("woff"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.ttf")
+      format("truetype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.svg#Cooper Hewitt")
+      format("svg");
+}
+
+@font-face {
+  font-family: "Cooper Hewitt";
+  font-weight: 700;
+  font-style: normal;
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.eot");
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.eot?#iefix")
+      format("embedded-opentype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.woff2")
+      format("woff2"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.woff")
+      format("woff"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.ttf")
+      format("truetype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.svg#Cooper Hewitt")
+      format("svg");
+}
+
+@font-face {
+  font-family: "Cooper Hewitt";
+  font-weight: 300;
+  font-style: italic;
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.eot");
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.eot?#iefix")
+      format("embedded-opentype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.woff2")
+      format("woff2"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.woff")
+      format("woff"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.ttf")
+      format("truetype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.svg#Cooper Hewitt")
+      format("svg");
+}
+
+@font-face {
+  font-family: "Cooper Hewitt";
+  font-weight: 400;
+  font-style: italic;
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.eot");
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.eot?#iefix")
+      format("embedded-opentype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.woff2")
+      format("woff2"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.woff")
+      format("woff"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.ttf")
+      format("truetype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.svg#Cooper Hewitt")
+      format("svg");
+}
+
+@font-face {
+  font-family: "Cooper Hewitt";
+  font-weight: 700;
+  font-style: italic;
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.eot");
+  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.eot?#iefix")
+      format("embedded-opentype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.woff2")
+      format("woff2"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.woff")
+      format("woff"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.ttf")
+      format("truetype"),
+    url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.svg#Cooper Hewitt")
+      format("svg");
+}
+
+/* Reset */
 html,
 body,
 div,
@@ -101,21 +206,17 @@ nav,
 section {
   display: block;
 }
-
 body {
   line-height: 1;
 }
-
 ol,
 ul {
   list-style: none;
 }
-
 blockquote,
 q {
   quotes: none;
 }
-
 blockquote:before,
 blockquote:after,
 q:before,
@@ -123,7 +224,6 @@ q:after {
   content: "";
   content: none;
 }
-
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -143,141 +243,14 @@ select {
 
 * {
   -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
 
-@font-face {
-  font-family: "Cooper Hewitt";
-  font-weight: 300;
-  font-style: normal;
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.eot");
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.eot?#iefix") format("embedded-opentype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.woff2") format("woff2"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.woff") format("woff"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.ttf") format("truetype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300.svg#Cooper Hewitt") format("svg");
-}
-
-@font-face {
-  font-family: "Cooper Hewitt";
-  font-weight: 400;
-  font-style: normal;
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.eot");
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.eot?#iefix") format("embedded-opentype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.woff2") format("woff2"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.woff") format("woff"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.ttf") format("truetype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400.svg#Cooper Hewitt") format("svg");
-}
-
-@font-face {
-  font-family: "Cooper Hewitt";
-  font-weight: 700;
-  font-style: normal;
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.eot");
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.eot?#iefix") format("embedded-opentype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.woff2") format("woff2"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.woff") format("woff"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.ttf") format("truetype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700.svg#Cooper Hewitt") format("svg");
-}
-
-@font-face {
-  font-family: "Cooper Hewitt";
-  font-weight: 300;
-  font-style: italic;
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.eot");
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.eot?#iefix") format("embedded-opentype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.woff2") format("woff2"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.woff") format("woff"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.ttf") format("truetype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-300_italic.svg#Cooper Hewitt") format("svg");
-}
-
-@font-face {
-  font-family: "Cooper Hewitt";
-  font-weight: 400;
-  font-style: italic;
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.eot");
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.eot?#iefix") format("embedded-opentype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.woff2") format("woff2"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.woff") format("woff"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.ttf") format("truetype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-400_italic.svg#Cooper Hewitt") format("svg");
-}
-
-@font-face {
-  font-family: "Cooper Hewitt";
-  font-weight: 700;
-  font-style: italic;
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.eot");
-  src: url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.eot?#iefix") format("embedded-opentype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.woff2") format("woff2"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.woff") format("woff"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.ttf") format("truetype"), url("//d2wwthy2zmzhx.cloudfront.net/fonts/cooper-hewitt-700_italic.svg#Cooper Hewitt") format("svg");
-}
+/* End of reset */
 
 body {
   font-family: "Cooper Hewitt";
-  font-weight: 400;
-  font-size: 16px;
-  background-color: #004d96;
-  color: #fff;
 }
-
-a {
-  color: #fff;
-  text-decoration: none;
-}
-
-header {
-  position: fixed;
-  top: 30px;
-  left: 30px;
-}
-
-header h1 {
-  font-family: "Roboto Slab";
-  font-size: 24px;
-  font-weight: 700;
-  letter-spacing: 2px;
-}
-
-header p {
-  margin-top: 10px;
-  font-size: 24px;
-}
-
-section {
-  width: 100vw;
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-section.img_one {
-  background-image: url(./assets/sally_1.jpg);
-}
-
-section.img_two {
-  background-image: url(./assets/sally_2.jpg);
-}
-
-section.img_three {
-  background-image: url(./assets/sally_3.jpg);
-}
-
-section.img_four {
-  background-image: url(./assets/sally_4.jpg);
-}
-
-section.img_five {
-  background-image: url(./assets/sally_5.jpg);
-}
-
-section.img_six {
-  background-image: url(./assets/sally_6.jpg);
-}
-
-section.img_seven {
-  background-image: url(./assets/sally_7.jpg);
-}
-
-section.img_eight {
-  background-image: url(./assets/sally_8.jpg);
-}
-
-footer {
-  position: fixed;
-  bottom: 30px;
-  left: 30px;
-}
-
-footer a:not(:last-child) {
-  margin-right: 15px;
-}
-
-footer a:hover {
-  color: #ddd;
-}
-/*# sourceMappingURL=style.css.map */
