--- a/style.css
+++ b/style.css
@@ -273,6 +273,7 @@ section {
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 section.image_1 {
