--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ footer {
 footer a {
   color: #fff;
   text-decoration: none;
-  transition: 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
 }
 
 footer a:not(:last-child) {
